// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DownloadDataSummary renders the download data summary (sidebar) 1`] = `
<div>
  <div
    class="DownloadDataSummary"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="expand-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Drawn polygon
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the download data summary (sidebar) in mobile and tablet 1`] = `
<div>
  <div
    class="DownloadDataSummary"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Drawn polygon
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the download data summary (sidebar) with responsiveness turned off 1`] = `
<div>
  <div
    class="DownloadDataSummaryNonResponsive"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="expand-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Country selected
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the download data summary (sidebar) with selectionType=country 1`] = `
<div>
  <div
    class="DownloadDataSummary"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="expand-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Country selected
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the download data summary (sidebar) with selectionType=drawn-polygon 1`] = `
<div>
  <div
    class="DownloadDataSummary"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="expand-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Drawn polygon
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the download data summary (sidebar) with selectionType=h3-cell 1`] = `
<div>
  <div
    class="DownloadDataSummary"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="expand-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          H3cell selected
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the expanded download data summary (sidebar) 1`] = `
<div>
  <div
    class="DownloadDataSummary Expanded"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="reduce-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Drawn polygon
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DownloadDataSummary renders the reduced download data summary (sidebar) 1`] = `
<div>
  <div
    class="DownloadDataSummary"
  >
    <div
      class="MapSection"
    >
      <div
        class="Map"
      >
        <div>
          Mock SoilhiveSimpleMap
        </div>
        <button
          class="Button Tertiary Small IconOnly"
          data-testid="expand-download-data-summary-button"
          type="button"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
        </button>
      </div>
      <div
        class="SubMap"
      >
        <div
          class="SectionTitle"
        >
          Drawn polygon
        </div>
        <div
          class="Location"
        >
          <svg
            data-testid="svg-icon-mock"
          >
            mock-svg
          </svg>
          France
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="DataSummary"
    >
      <div
        class="SectionTitle"
      >
        Data summary
      </div>
      <div
        class="DataSummaryContent"
      >
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Data points
          </div>
          <div
            class="DataSummaryRowData"
          >
            7.367
          </div>
        </div>
        <div
          class="DataSummaryRow"
        >
          <div
            class="DataSummaryRowTitle"
          >
            <svg
              data-testid="svg-icon-mock"
            >
              mock-svg
            </svg>
            Raster Layers
          </div>
          <div
            class="DataSummaryRowData"
          >
            4
          </div>
        </div>
      </div>
    </div>
    <div
      class="Separator"
    />
    <div
      class="AppliedFilters"
    >
      <div
        class="SectionTitle"
      >
        Applied Filters
      </div>
      <div
        class="FiltersList"
      >
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Depth range
          </div>
          <div
            class="FilterValue"
          >
            0-50cm
          </div>
        </div>
        <div
          class="Filter"
        >
          <div
            class="FilterName"
          >
            Soil Properties
          </div>
          <div
            class="FilterValue"
          >
            pH, Organic Carbon Content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
